# Derenpy

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
scripts/: decompile.py
src/: main.rs  utils.rs
src/auto/: mod.rs
src/cli/: mod.rs
src/config/: commands.rs  mod.rs
src/decompile/: mod.rs  rpyc.rs
src/patch/: mod.rs
src/repack/: mod.rs  rpa.rs
src/translate/: cache.rs  extractor.rs  glossary.rs  llm.rs  machine_translate.rs  mod.rs  renpy_tl.rs
src/unpack/: mod.rs  rpa.rs
tests/: cache_tests.rs  cli_tests.rs  rpa_tests.rs  translation_tests.rs
